@@ -10,6 +10,68 @@ system data is being stored is called a *bucket*. (This is mostly for
 historical reasons, since initially S3QL supported only the Amazon S3
 backend).
 
+
+On Backend Reliability
+======================
+
+S3QL has been designed for use with a storage backend where data loss
+is so infrequent that it can be completely neglected (e.g. the Amazon
+S3 backend). If you decide to use a less reliable backend, you should
+keep the following warning in mind and read this section carefully.
+
+.. WARNING::
+
+  S3QL is not able to compensate for any failures of the backend. In
+  particular, it is not able reconstruct any data that has been lost
+  or corrupted by the backend. The persistence and durability of data
+  stored in an S3QL file system is limited and determined by the
+  backend alone.
+  
+
+On the plus side, if a backend looses or corrupts some of the stored
+data, S3QL *will* detect the problem. Missing data will be detected
+when running `fsck.s3ql` or when attempting to access the data in the
+mounted file system. In the later case you will get an IO Error, and
+on unmounting S3QL will warn you that the file system is damaged and
+you need to run `fsck.s3ql`.
+
+`fsck.s3ql` will report all the affected files and move them into the
+`/lost+found` directory of the file system.
+
+You should be aware that, because of S3QL's data de-duplication
+feature, the consequences of a data loss in the backend can be
+significantly more severe than you may expect. More concretely, a data
+loss in the backend at time *x* may cause data that is written *after*
+time *x* to be lost as well. What may happen is this:
+
+#. You store an important file in the S3QL file system.
+#. The backend looses the data blocks of this file. As long as you
+   do not access the file or run `fsck.s3ql`, S3QL
+   is not aware that the data has been lost by the backend.
+#. You save an additional copy of the important file in a different
+   location on the same S3QL file system.
+#. S3QL detects that the contents of the new file are identical to the
+   data blocks that have been stored earlier. Since at this point S3QL
+   is not aware that these blocks have been lost by the backend, it
+   does not save another copy of the file contents in the backend but
+   relies on the (presumably) existing blocks instead.
+#. Therefore, even though you saved another copy, you still do not
+   have a backup of the important file (since both copies refer to the
+   same data blocks that have been lost by the backend).
+
+As one can see, this effect becomes the less important the more often
+one runs `fsck.s3ql`, since `fsck.s3ql` will make S3QL aware of any
+blocks that the backend may have lost. Figuratively, this establishes
+a "checkpoint": data loss in the backend that occurred before running
+`fsck.s3ql` can not affect any file system operations performed after
+running `fsck.s3ql`.
+
+
+Nevertheless, (as said at the beginning) the recommended way to use
+S3QL is in combination with a sufficiently reliable storage backend.
+In that case none of the above will ever be a concern.
+
+
 The `authinfo` file
 ===================
 
@@ -116,20 +178,18 @@ Therefore there is no "totally safe" waiting time that would totally
 eliminate this problem; a theoretical possibility always remains.
 
 
-  
 
 The Amazon S3 Backend
 =====================
 
 To store your file system in an Amazon S3 bucket, use a storage URL of
-the form `s3://<bucketname>` or `s3rr://<bucketname>`. The later form
-will use `reduced redundancy storage
-<http://aws.amazon.com/s3/#protecting>`_. In theory you could change
-the prefix for a given bucket at will, but you really should not do
-this because different parts of your file system would then be stored
-with different durability guarantees.
+the form `s3://<bucketname>`. Bucket names must conform to the `S3
+Bucket Name Restrictions`_.
 
-Bucket names must conform to the `S3 Bucket Name Restrictions`_.
+The S3 backend offers exceptionally strong reliability guarantees. As
+of August 2010, Amazon guarantees a durability of 99.999999999% per
+year. In other words, if you store a thousand million objects then on
+average you would loose less than one object in a hundred years. 
 
 The Amazon S3 backend provides read-after-create consistency for the
 EU, Asia-Pacific and US-West storage regions. *For the US-Standard
@@ -141,7 +201,7 @@ When reading the authentication information for the S3 backend from
 the `authinfo` file, the `host` field is ignored, i.e. the first entry
 with `s3` as a backend will be used. For example ::
 
-   backend s3 machine any myAWSaccessKeyId password myAwsSecretAccessKey
+   backend s3 machine any login myAWSaccessKeyId password myAwsSecretAccessKey
 
 Note that the bucket names come from a global pool, so chances are
 that your favorite name has already been taken by another S3 user.
@@ -160,6 +220,33 @@ Account/Access Identifiers
 <https://aws-portal.amazon.com/gp/aws/developer/account/index.html?ie=UTF8&action=access-key>`_.
 
 .. _`S3 Bucket Name Restrictions`: http://docs.amazonwebservices.com/AmazonS3/2006-03-01/dev/BucketRestrictions.html
+
+.. NOTE::
+
+   S3QL also allows you to use `reduced redundancy storage
+   <http://aws.amazon.com/s3/#protecting>`_ by using ``s3rr://``
+   instead of ``s3://`` in the storage url. However, this not
+   recommended. The reason is a combination of three factors:
+
+   * RRS has a relatively low reliability, on average you loose one
+     out of every ten-thousand objects a year. So you can expect to
+     occasionally loose some data.
+
+   * When `fsck.s3ql` asks Amazon S3 for a list of the stored objects,
+     this list includes even those objects that have been lost.
+     Therefore `fsck.s3ql` *can not detect lost objects* and lost data
+     will only become apparent when you try to actually read from a
+     file whose data has been lost. This is a (very unfortunate)
+     peculiarity of Amazon S3.
+
+   * Due to the data de-duplication feature of S3QL, unnoticed lost
+     objects may cause subsequent data loss later in time (see `On
+     Backend Reliability`_ for details).
+
+   In other words, you should really only store an S3QL file system
+   using RRS if you know exactly what you are getting into.
+     
+
 
 
 The Local Backend
@@ -196,4 +283,6 @@ The public and private keys will be read from the standard files in
 unknown host key; to add the key to your local keyring you have to
 establish a connection to that computer with the standard SSH command
 line programs first.
+
+
 
