@@ -402,6 +402,9 @@ def check_keylist():
     log.info('Checking object list...')
     global found_errors
 
+    lof_id = conn.get_val("SELECT inode FROM contents WHERE name=? AND parent_inode=?",
+                          (b"lost+found", ROOT_INODE))
+
     # We use this table to keep track of the object that we have
     # seen
     conn.execute("CREATE TEMP TABLE obj_ids (id INTEGER PRIMARY KEY)")
@@ -431,11 +434,16 @@ def check_keylist():
         for (obj_id,) in conn.query('SELECT * FROM missing'):
             found_errors = True
             log_error("object %s only exists in table but not in bucket, deleting", obj_id)
-            log_error("The following files may lack data:")
+            log_error("The following files may lack data and have been moved to /lost+found:")
             for (id_,) in conn.query('SELECT inode FROM blocks WHERE obj_id=?', (obj_id,)):
                 for (name, id_p) in conn.query('SELECT name, parent_inode FROM contents '
                                                'WHERE inode=?', (id_,)):
-                    log_error(get_path(id_p, conn, name))
+                    path = get_path(id_p, conn, name)
+                    log_error(path)
+                    newname = path[1:].replace('_', '__').replace('/', '_')
+                    conn.execute('UPDATE contents SET name=?, parent_inode=? '
+                                 'WHERE inode=?', (newname, lof_id, id_))
+                    
             conn.execute("DELETE FROM blocks WHERE obj_id=?", (obj_id,))
             conn.execute("DELETE FROM objects WHERE id=?", (obj_id,))
     finally:
